--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,14 @@ dependencies:
   ionicons: ^0.2.2
   riverpod_generator: ^2.4.0
   flutter_secure_storage: ^9.2.2
+  dio: ^5.4.3+1
+  pretty_dio_logger: ^1.3.1
+  intl: ^0.19.0
+  percent_indicator: ^4.2.3
+  qr_flutter: ^4.1.0
+  mobile_scanner: ^5.1.1
+  local_auth: ^2.2.0
+
 
 dev_dependencies:
   flutter_test:
